--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "reflect-metadata": "0.1.9",
     "rxjs": "5.1.1",
     "tether": "1.4.0",
-    "zone.js": "0.7.7"
+    "zone.js": "0.7.7",
+    "sockjs-client": "1.1.2",
+    "stompjs": "2.3.3"
   },
   "devDependencies": {
     "@angular/compiler-cli": "2.4.9",
@@ -63,6 +65,8 @@
     "@types/source-map": "0.5.0",
     "@types/uglify-js": "2.6.28",
     "@types/webpack": "2.2.5",
+    "@types/sockjs-client": "1.0.30",
+    "@types/stompjs": "2.3.0",
     "add-asset-html-webpack-plugin": "1.0.2",
     "angular2-template-loader": "0.6.0",
     "assets-webpack-plugin": "3.5.1",
